# cudaa

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
src/: main.cu  raytracing.cu  sgemm.cu
